# debateArena

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
config/prompts/: compactor.j2  debater.j2  opening_instruction.j2  referee_final.j2  referee_review.j2  turn_guard.j2
docs/: 225.txt  ai-threat.txt  index.html  script.js  styles.css
src/debate_arena/: __init__.py  main.py
src/debate_arena/agents/: __init__.py  debater.py  summarizer.py
src/debate_arena/config/: __init__.py  loader.py  models.py
src/debate_arena/core/: manager.py
src/debate_arena/domain/: __init__.py  models.py
src/debate_arena/graph/: __init__.py  workflow.py
src/debate_arena/llm/: __init__.py  interfaces.py  ollama.py
src/debate_arena/prompts/: __init__.py  repository.py
src/debate_arena/services/: __init__.py  context_budget.py  formatting.py  parsing.py  presenter.py
src/debate_arena/utils/: config_loader.py
