[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debate-arena"
version = "0.1.0"
description = "Autonomous Debate CLI System using LangChain and Ollama"
authors = [
  { name = "Arrase", email = "arrase@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "PyYAML",
    "rich",
]

[project.scripts]
debate-cli = "debate_arena.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["debate_arena", "debate_arena.*"]
